<resources>
    <string name="app_name">Watchlist</string>
    <string name="welcome_image">Welcome image</string>
    <string name="discover_favorite_movies_series_tv_shows_and_more"><b>Discover Favorite Movies, Series, TV Shows and more</b></string>
    <string name="let_s_get_started">Let\'s Get Started</string>
    <string name="gradient_background">Gradient background</string>
    <string name="login"><b>Log in</b></string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_up"><b>Sign up</b></string>
    <string name="confirm_password">confirm password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="name">name</string>
    <string name="explore">Explore</string>
    <string name="search">Search</string>
    <string name="liked">Liked</string>
    <string name="all_movies">All Movies</string>
    <string name="welcome">Welcome</string>
    <string name="movie_poster_desc">movie poster desc</string>
    <string name="movie_poster_description">movie poster description</string>
    <string name="search_for_movies">Search for movies</string>
    <string name="movie_poster">movie poster</string>
    <string name="movie_title">Movie Title</string>
    <string name="rating_8_5_10">Rating: 8.5/10</string>
    <string name="runtime_120_min">Runtime: 120 min</string>
    <string name="actors_actor_1_actor_2_actor_3">Actors: Actor 1, Actor 2, Actor 3</string>
    <string name="plot_summary_goes_here">Plot summary goes here...</string>
    <string name="release_year">Release Year:</string>
    <string name="back_button_desc">back button desc</string>
    <string name="liked_movies">Watchlist</string>
    <string name="logout">Logout</string>
</resources>