<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/main_color"
    android:padding="16dp">

    <ImageView
        android:id="@+id/movie_poster"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scaleType="fitCenter"
        android:contentDescription="@string/movie_poster" />

    <TextView
        android:id="@+id/movie_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"
        android:text="@string/movie_title" />

    <TextView
        android:id="@+id/movie_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/white"
        android:text="@string/rating_8_5_10" />

    <TextView
        android:id="@+id/movie_release_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/release_year"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/movie_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/white"
        android:text="@string/plot_summary_goes_here" />

    <ImageView
        android:id="@+id/like_button"
        android:layout_width="72dp"
        android:layout_height="65dp"
        android:layout_gravity="end"
        android:layout_marginTop="2dp"
        android:src="@drawable/ic_heart_outline" />

</LinearLayout>
