<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    tools:context=".WelcomeActivity">

    <ImageView
        android:id="@+id/welcome_image"
        android:layout_width="wrap_content"
        android:layout_height="500dp"
        android:contentDescription="@string/welcome_image"
        android:scaleType="centerCrop"
        android:src="@drawable/welcome_pic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="405dp"
        android:layout_height="30dp"
        android:contentDescription="@string/gradient_background"
        app:layout_constraintBottom_toBottomOf="@+id/welcome_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/gradient_background"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/discover_favorite_movies_series_tv_shows_and_more"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/welcome_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp"
        android:textAlignment="center"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/get_started_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:padding="12dp"
        android:background="@drawable/orange_button_background"
        android:text="@string/let_s_get_started"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome_text" />

</androidx.constraintlayout.widget.ConstraintLayout>