<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/main_color"
    tools:context=".SignupActivity">

    <TextView
        android:id="@+id/signup_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="40sp"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="80dp"
        android:gravity="center"/>

    <EditText
        android:id="@+id/name_input"
        android:inputType="text"
        android:layout_width="282dp"
        android:layout_height="58dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@android:color/white"
        android:hint="@string/name"
        android:padding="12dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signup_title" />

    <Spinner
        android:id="@+id/genre_spinner"
        android:layout_width="282dp"
        android:layout_height="66dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@android:color/white"
        android:entries="@array/genre_array"
        android:padding="12dp"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_input" />

    <EditText
        android:id="@+id/email_input"
        android:layout_width="282dp"
        android:layout_height="65dp"
        android:layout_marginTop="16dp"
        android:hint="@string/email"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:inputType="textEmailAddress"
        android:backgroundTint="@android:color/white"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/genre_spinner" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="282dp"
        android:layout_height="65dp"
        android:layout_marginTop="16dp"
        android:hint="@string/password"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:inputType="textPassword"
        android:backgroundTint="@android:color/white"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_input" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:padding="12dp"
        android:text="@string/sign_up"
        android:textSize="16sp"
        android:background="@drawable/orange_button_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_input" />

    <TextView
        android:id="@+id/login_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/already_have_an_account"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signup_button" />

    <TextView
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_prompt" />
</androidx.constraintlayout.widget.ConstraintLayout>
