<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    tools:context=".ExploreActivity">

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="24sp"
        android:textColor="@android:color/white"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="false"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/logout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:textSize="16sp"
        android:background="@drawable/orange_button_background"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:layout_alignTop="@id/welcome_text"/>

    <TextView
        android:id="@+id/all_movies_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_movies"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:layout_below="@id/welcome_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/movies_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/all_movies_title"
        android:layout_above="@id/bottom_navigation"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        android:clipToPadding="false"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        app:menu="@menu/bottom_navigation_menu" />

</RelativeLayout>
